--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -32,10 +32,10 @@
 }
 
 .character:hover {
-    background: silver;
+    background: #b0def6;
     border: 1px solid grey;
     font-size: 20px;
-    justify-content: space-between;
+       justify-content: space-between;
     margin: 7px;
 }
 .name{
