--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -65,3 +65,21 @@
     font-weight: lighter;
     cursor: pointer;
 }
+
+
+.container_episode {
+    display: inline-flex;
+    width: 100%;
+    box-sizing: border-box;
+    /*position: relative;*/
+    flex-wrap: wrap;
+}
+.episode{
+    border: 1px solid grey;
+    justify-content: space-between;
+    margin: 7px;
+    padding: 4px;
+    font-size: 20px;
+    align-items: center;
+    border-radius: 20px;}
+
