--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -116,3 +116,14 @@
     font-size: 15px;
 }
 /*watch-list*/
+.watch_list{
+    display: flex;
+
+
+}
+.list_img{
+    height: 150px;
+    margin: 0 40px;
+    margin-bottom: 5px;
+
+}
